src/assets/index.scss
/* ... */
.hi {
  font-size: 80px;
  color: white;
  margin-top: 300px;
}

.EditTags {
  width: 95%;
  max-width: 420px;
  padding: 2rem 2rem;
  overflow: auto;
  border: 1px solid $background-secondary;
  box-shadow: 0px 5px 20px 10px $background-secondary;
  border-radius: 20px;
  position: absolute;
  z-index: 10 !important;
  background-color: $background;
  padding-bottom: 3rem;

  .edittags__close {
    border: none;
    background-color: transparent;
    font-size: 24px;
    display: block;
    margin-left: auto;
    cursor: pointer;
    color: $text-main;
  }

  @include mobile {
    box-shadow: none;
    width: 100%;
    height: 100%;
    border-radius: 0;
    max-width: none;
  }

  p.heading {
    color: $text-main;
    margin: 1rem 0;
    font-size: 20px;

    span {
      text-decoration: underline;
      text-decoration-color: $neon-blue;
    }
  }

  .Tags {
    margin-top: 2rem;
    display: flex;
    flex-direction: column;
    row-gap: 1rem;
  }

  .Tag {
    background-color: $background-secondary;
    padding: .8rem 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: $text-main;
    border-radius: 4px;

    p {
      font-family: $font-main;
      text-decoration: underline;
      text-decoration-color: $neon-blue;
      cursor: pointer;
    }

    button {
      width: 25px;
      height: 25px;
      background-color: $neon-blue;
      border: none;
      border-radius: 4px;
      cursor: pointer;
      color: $background;

      @include hover {
        opacity: .7;
      }
    }
  }

  .Tag-Editing {
    display: flex;
    justify-content: space-between;
    height: 35px;

    input {
      padding: 0 .5rem;
      font-family: $font-main;
      font-size: 16px;
      background: transparent;
      color: $text-main;
      border: 1px solid $gray;
      border-radius: 4px;
      width: 85%;
    }

    input:focus {
      outline-color: $neon-blue;
    }

    button {
      width: 12%;
      display: flex;
      justify-content: center;
      align-items: center;
      gap: .4rem;
      font-family: $font-main;
      background-color: $neon-blue;
      border: none;
      cursor: pointer;
      border-radius: 5px;

      @include hover {
        opacity: .8;
      }
    }
  }

  .Add-Tag {
    height: 40px;
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    gap: .4rem;

    input {
      width: 80%;
      background-color: $background-tertiary;
      border: none;
      border-radius: 4px;
      outline: none;
      color: $text-main;
      padding: 0 .5rem;
      font-size: 16px;
      font-family: $font-main;
    }

    button {
      border: none;
      width: 20%;
      border-radius: 4px;
      background-color: $neon-blue;
      font-family: $font-main;
      font-size: 16.2px;
      cursor: pointer;
      color: $background;
    }
  }
}
/* ... */

